# packhub

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  apt sources list test.txt  docker-compose.yml  log.txt
.github/workflows/: docker-deploy.yml  infratest.yml  main.yml  test.yml
data/: fastfetch-linux-aarch64.deb  fastfetch-linux-aarch64.rpm  fastfetch-linux-amd64.deb  fastfetch-linux-amd64.rpm  fastfetch-linux-armv6l.deb  fastfetch-linux-armv6l.rpm  fastfetch-linux-armv7l.deb  fastfetch-linux-armv7l.rpm  fastfetch-linux-ppc64le.deb  fastfetch-linux-ppc64le.rpm  fastfetch-linux-riscv64.deb  fastfetch-linux-riscv64.rpm  fastfetch-linux-s390x.deb  fastfetch-linux-s390x.rpm
data/self-signed-certs/: cert.pem  key.pem
images/: debian12-multi-package.Dockerfile  fedora38-multi-package.Dockerfile  fedora38.Dockerfile  fedora42-multi-package.Dockerfile  fedora42.Dockerfile  server-ci.Dockerfile  server.Dockerfile  ubuntu23.04-multi-package.Dockerfile  ubuntu23.04.Dockerfile  ubuntu24.04-multi-package.Dockerfile
infratest/: Cargo.toml
infratest/images/: debian12.Dockerfile  server-ci.Dockerfile  tumbleweed-multi-package.Dockerfile  ubuntu24.04.Dockerfile
infratest/scripts/: check_apt_multiple.sh  check_apt_pre.sh  check_dnf.sh  check_dnf_multiple.sh  check_dnf_pre.sh  check_dnf_v1.sh  run_distro.sh  run_server.sh
infratest/src/: containers.rs  distro.rs  infra.rs  main.rs  none.rs
pages/: index.html
pages/assets/: packhub.css  packhub.js
scripts/: check_apt.sh  check_apt_multiple.sh  check_dnf.sh  check_dnf_multiple.sh  check_zypper_multiple.sh  deploy.ps1  deploy.sh  run_server.sh
src/: apt.rs  db.rs  deb.rs  detect.rs  error.rs  index.rs  lib.rs  main.rs  package.rs  pgp.rs  platform.rs  repository.rs  script.rs  selector.rs  state.rs  utils.rs
src/apt/: deb.rs  index.rs  mod.rs  routes.rs
src/apt/snapshots/: packhub__apt__index__tests__apt_indices-2.snap  packhub__apt__index__tests__apt_indices.snap  packhub__apt__index__tests__multiple_architectures.snap  packhub__apt__index__tests__multiple_packages-2.snap  packhub__apt__index__tests__multiple_packages.snap
src/rpm/: index.rs  mod.rs  package.rs  parser.rs  routes.rs
src/rpm/snapshots/: packhub__rpm__index__tests__multiple_arch-2.snap  packhub__rpm__index__tests__multiple_arch-3.snap  packhub__rpm__index__tests__multiple_arch-4.snap  packhub__rpm__index__tests__multiple_arch.snap  packhub__rpm__index__tests__rpm_indices-2.snap  packhub__rpm__index__tests__rpm_indices-3.snap  packhub__rpm__index__tests__rpm_indices-4.snap  packhub__rpm__index__tests__rpm_indices.snap  packhub__rpm__package__tests__parser-2.snap  packhub__rpm__package__tests__parser.snap  packhub__rpm__parser__tests__parser.snap
src/script/: apt.rs  mod.rs  rpm.rs
src/script/snapshots/: packhub__script__apt__tests__script_generation_apt-2.snap  packhub__script__apt__tests__script_generation_apt.snap  packhub__script__rpm__tests__script_generation_rpm_v1-2.snap  packhub__script__rpm__tests__script_generation_rpm_v1.snap  packhub__script__rpm__tests__script_generation_rpm_v2-2.snap  packhub__script__rpm__tests__script_generation_rpm_v2-3.snap  packhub__script__rpm__tests__script_generation_rpm_v2-4.snap  packhub__script__rpm__tests__script_generation_rpm_v2.snap  packhub__script__tests__script_apt_endpoint-2.snap  packhub__script__tests__script_apt_endpoint.snap  packhub__script__tests__script_rpm_endpoint-2.snap  packhub__script__tests__script_rpm_endpoint-3.snap  packhub__script__tests__script_rpm_endpoint-4.snap  packhub__script__tests__script_rpm_endpoint-5.snap  packhub__script__tests__script_rpm_endpoint-6.snap  packhub__script__tests__script_rpm_endpoint.snap
src/snapshots/: packhub__index__tests__apt_indices-2.snap  packhub__index__tests__apt_indices.snap  packhub__script__tests__script_generation_apt.snap  packhub__script__tests__script_generation_rpm-2.snap  packhub__script__tests__script_generation_rpm.snap
templates/: Packages  RELEASE  Release  apt-script.sh  filelists.xml  other.xml  primary.xml  repomd.xml  rpm-script.sh
