[package]
name = "packhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["clock"] }
once_cell = "1"
octocrab = "0.38"
regex = "1"
semver = "1"
lenient_semver = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
reqwest = { version = "0.12", features = ["stream"] }
ar = "0.9"
libflate = "2"
tar = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
rpm = "0.15"
anyhow = "1"
zstd = "0.13"
pgp = "0.13"
mongodb = "3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
