[package]
name = "packhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["clock"] }
dotenvy = "0.15"
octocrab = "0.43"
regex = "1"
semver = "1"
lenient_semver = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
ar = "0.9"
libflate = "2"
tar = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
rpm = "0.16"
anyhow = "1"
zstd = "0.13"
pgp = "0.15"
rand = { version = "0.8", features = ["getrandom"] }
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
testcontainers-modules = { version = "0.11", features = ["mongo"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
