[package]
name = "packhub"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["macros", "query"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
askama = "0.13"
chrono = { version = "0.4.38", features = ["clock"] }
dotenvy = "0.15"
octocrab = { version = "0.46", features = ["stream"] }
regex = "1"
semver = "1"
lenient_semver = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
rustls = "0.23"
ar = "0.9"
libflate = "2"
tar = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
rpm = "0.17"
anyhow = "1"
zstd = "0.13"
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sequoia-openpgp = "2.0.0"
futures-util = "0.3"

[dev-dependencies]
axum-test = "18"
insta = { version = "1", features = ["filters"] }
testcontainers-modules = { version = "0.11", features = ["mongo"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
