[package]
name = "infratest"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
tar = "0.4"
testcontainers-modules = { version = "0.13", features = ["mongo"] }
pretty_env_logger = "0.4"
testcontainers = { git = "https://github.com/mominul/testcontainers-rs.git", branch = "platform_config", features = ["http_wait"] }

[patch.crates-io]
testcontainers = { git = "https://github.com/mominul/testcontainers-rs.git", branch = "platform_config" }
