[package]
name = "infratest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
testcontainers-modules = { version = "0.13", features = ["mongo"] }

[patch.crates-io]
testcontainers = { git = "https://github.com/mominul/testcontainers-rs.git", branch = "platform_config" }
